@@ -56,6 +56,8 @@ CHANGES - Current Version:
 
 - Added bDeletedFlag to TABFeature with get/set methods
 
+- Maintain and/or compute values of regions and polyline center/label point
+  (Used to always use the center of the MBR and this was not correct)
 
 Version 1.0.1 - (2000-04-21)
 ----------------------------
@@ -171,5 +173,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.20 2000-09-07 23:28:43 daniel Exp $
+$Id: HISTORY.TXT,v 1.21 2000-09-19 17:23:52 daniel Exp $
 ------------
